# virc

./: .env.example  .gitattributes  .gitignore  FRONTEND.md  LICENSE  MVP.md  PLAN.md  README.md  REVIEW.md  TODO.md  dev.ps1  dev.sh  docker-compose.yml  virc_state.md
.cardinal/: code-review-final.md  code-review.md
.github/workflows/: ci.yml
accord-client/: package-lock.json  package.json  pnpm-lock.yaml
accord-client/dist-isolation/: index.js
accord-client/src/: app.css
accord-client/src-tauri/: Cargo.toml  tauri.conf.json
accord-client/src-tauri/src/: main.rs
accord-client/src/components/: AuthExpiredModal.svelte  (+23 more)
accord-files/: .dockerignore  Dockerfile  package.json
accord-files/src/: env.ts  index.ts  types.ts
accord-files/tests/: account.test.ts  accountInfo.test.ts  auth.test.ts  config.test.ts  env.test.ts  files.test.ts  helpers.ts  invite.test.ts  livekit.test.ts  middleware.test.ts  preview.test.ts  rateLimit.test.ts
config/caddy/: Caddyfile
config/ergo/: ircd.yaml
config/livekit/: config.yaml
virc-client/: package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
virc-client/dist-isolation/: index.html
virc-client/src/: app.css  app.html
virc-client/src-tauri/: Cargo.toml  tauri.conf.json
virc-client/src-tauri/capabilities/: default.json
virc-client/src-tauri/src/: lib.rs
virc-files/: Dockerfile  package.json
virc-files/src/: env.ts  index.ts
virc-files/tests/: auth.test.ts  config.test.ts  files.test.ts  helpers.ts  invite.test.ts  livekit.test.ts  middleware.test.ts  preview.test.ts  rateLimit.test.ts
(+164 files in other folders)
