[package]
name = "virc"
version = "0.1.0"
description = "Discord-like chat on IRC"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "virc_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = ["isolation"] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", default-features = false, features = ["isolation", "wry"] }
tauri-plugin-opener = "2.5.3"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"
panic = "abort"
incremental = false

[profile.dev]
incremental = true
opt-level = 0

# Speed up dev builds for the windows crate (slow to compile at opt-level 0)
[profile.dev.package.windows]
opt-level = 1
